odoo-k8s/ingress.yaml
# I'm testing the nginx-ingress for this deployment so better to ignore this step. More updates in upcoming commits.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: odoo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: odoo-sv
              servicePort: 80
